# LED_Cube_5x5x5

./: .gitignore  .gitmodules  Functions.h  README.md
ATmega32p/: Makefile  Numbers.h  README.md  main.c
Rpi-pico-W/: README.md
Rpi-pico-W/Notes/falstad_simulation/: 2_column_switches_10LEDS.txt  2_column_switches_10LEDS_adjusted.txt  2_column_switches_10LEDS_bipolar.txt  n-channel_mosfet_diode-1.txt  n-channel_mosfet_diode.txt  p-channel_mosfet_diode.txt  p-channel_mosfet_diode_2.txt  p-channel_mosfet_diode_3.txt  p-channel_mosfet_diode_5LEDS.txt  simulation_of_switches_DONE (1).txt  simulation_of_switches_DONE.txt  simulation_of_switches_Finished.txt
Rpi-pico-W/code/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  animations.cpp  animations.hpp  cube.cpp  cube.hpp  cube_states.cpp  cube_states.hpp  led.cpp  led.hpp  lwipopts.h  main.c  main.cpp  make.sh  numbers.cpp  numbers.hpp  setenv.sh  swd_flash.sh  wifi.cpp  wifi.hpp
Rpi-pico-W/code/Source/Inc/: animations.hpp  apptasks.hpp  cube.hpp  wifi.hpp
Rpi-pico-W/code/Source/Src/: animations.cpp  cube.cpp  main.cpp  numbers.cpp  wifi.cpp
